Исправлен интерфейс просмотра сотрудников

--- a/html/employee_viewer.html
+++ b/html/employee_viewer.html
@@ -1,4 +1,4 @@
-<h3> <h3> Сотрудник %%NAME%% %%SURNAME%%: Просмотр </h3>
+<h3> %%NAME%% %%SURNAME%%: Просмотр </h3>
 <form action = 'employee.php' method = 'POST'>
 	<table class = 'employee-editor'>
 		<tbody>
