--- a/html/unit_overview_table.html
+++ b/html/unit_overview_table.html
@@ -1,30 +1,63 @@
+<h3> Список изделий </h3>
+
 <table class = 'units'>
 	<tbody>
-		<tr class = 'table-header'>
+		<b> Цветовые обозначения </b>
+		<tr class = 'order-finish-bad'> 
 			<td>
-				№
-			</td>
-			<td>
-				Готовность
-				<!-- да/нет, когда -->
-			</td>
-			<td>
-				Заказано
-				<!-- кто, когда -->
-			</td>
-			<td>
-				Смонтировано
-				<!-- кто, когда -->
-			</td>
-			<td>
-				Проверено
-				<!-- кто, когда -->
-			</td>
-			<td>
-				Забраковано
-				<!-- кто, когда -->
+				Забракованные и отменённые изделия
 			</td>
 		</tr>
-	%%UNIT_TABLE_ROWS%%
+		<tr class = 'order-finish-good'> 
+			<td>
+				Выпущенные изделия
+			</td>
+		</tr>
+		<tr class = 'order-in-progress'> 
+			<td>
+				Изделия в процессе изготовления
+			</td>
+		</tr>
 	</tbody>
 </table>
+
+<br />
+
+<form action = 'unit.php' method = 'POST'>
+
+	%%PLACE_ORDER%%
+	
+	<br />
+	
+	<table class = 'units'>
+		<tbody>
+			<tr class = 'table-header'>
+				<td>
+					№
+				</td>
+				<td>
+					Состояние
+					<!-- да/нет, когда -->
+				</td>
+				<td>
+					Заказано
+					<!-- кто, когда -->
+				</td>
+				<td>
+					Смонтировано
+					<!-- кто, когда -->
+				</td>
+				<td>
+					Проверено
+					<!-- кто, когда -->
+				</td>
+				<td>
+					Забраковано
+					<!-- кто, когда -->
+				</td>
+			</tr>
+		%%UNIT_TABLE_ROWS%%
+		</tbody>
+	</table>
+
+</form>
